# s-expression

./: .gitignore  Main.hs  Makefile  README.md  s-expression.cabal  stack.yaml
sources/Data/: Sexp.hs
sources/Data/Sexp/: Example.hs  Main.hs
