name: s-expression
version: 0.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
copyright: Copyright (C) 2015 Spiros M. Boosalis
maintainer: samboosalis@gmail.com
stability: experimental
homepage: https://github.com/sboosali/s-expression#readme
bug-reports: https://github.com/sboosali/s-expression/issues
synopsis: simple general-purpose s-expressions 
description: e.g. 

category: Data 
author: Spiros Boosalis
tested-with: GHC ==7.10.1

source-repository head
    type: git
    location: https://github.com/sboosali/s-expression

library

 exposed-modules:
  Data.Sexp 

 build-depends:
  lens ==4.12.*, 
  semigroups ==0.16.*, 

  base ==4.8.*

 default-language: Haskell2010
 hs-source-dirs: sources
 ghc-options: -Wall
 default-extensions: AutoDeriveTypeable

